fix: overflow style

--- a/qwik-app/src/routes/Dsessential/panel/(student)/lessonReplay/components/videos/search/filter/filter.module.css
+++ b/qwik-app/src/routes/Dsessential/panel/(student)/lessonReplay/components/videos/search/filter/filter.module.css
@@ -3,7 +3,7 @@
   transition:
     0.5s ease-in-out max-height,
     0.6s ease-in-out margin-top;
-  overflow: hidden;
+  overflow: scroll;
   margin-top: 20px;
 }
 
